# neuron-core

./: .dockerignore  .firebaserc  .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  Multi Project Multi Agent Discussion.docx  README.md  build.rs  docker-compose.yml  firebase.json  index.html  install.ps1  install.sh
.agent/: acquisition_pitch_deck.md  features_list.md  launch_action_plan.md  neuron_platform_implementation_plan.md  pricing_strategy.md  project_master_brain.md  project_summary.md  public_release_notes.md
.github/workflows/: docker.yml  release.yml
.neuron/: neuron_manifest.json  session_context.md
k8s/: deployment.yaml
migrations/: 001_initial.sql  002_global_index.sql
portal/: index.html
src/: analyzer.rs  audit.rs  bridge.rs  cleanup.rs  config.rs  conversation.rs  dedup.rs  dependency.rs  digest.rs  git.rs  graph.rs  intent.rs  license.rs  loop_guard.rs  main.rs  manifest.rs  mcp.rs  parser.rs  portal_api.rs  project_manager.rs  sanitize.rs  search.rs  server.rs  session.rs  sessions.rs  stream.rs  sync.rs  utils.rs  watcher.rs
