[package]
name        = "ai-neuron"
version     = "1.1.0"
edition     = "2021"
authors     = ["Vishal Kudmethe"]
description = "Universal Persistent Memory Layer for AI Coding Agents — Memory Digest Engine & Information Blockchain Ledger"
license     = "AGPL-3.0-only"
repository  = "https://github.com/ai-neuron/neuron"
keywords    = ["ai", "memory", "context", "agents", "persistence"]
categories  = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ai-neuron"
path = "src/main.rs"

[dependencies]
# ── Async runtime ────────────────────────────────────────────────────────────
tokio       = { version = "1", features = ["full"] }

# ── HTTP / REST API (Portal server) ──────────────────────────────────────────
axum        = { version = "0.7", features = ["json"] }
tower-http  = { version = "0.5", features = ["cors", "fs"] }
tower       = "0.4"
reqwest     = { version = "0.11", features = ["json"] }
# ── CLI ───────────────────────────────────────────────────────────────────────
clap        = { version = "4", features = ["derive", "color", "env"] }

# ── File system watching ─────────────────────────────────────────────────────
notify      = { version = "6", features = ["serde"] }
ignore      = "0.4"

# ── Serialization ─────────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Database (SQLite + FTS5) ──────────────────────────────────────────────────
sqlx        = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

# ── Git integration ───────────────────────────────────────────────────────────
git2        = { version = "0.18", default-features = false }

# ── Tree-sitter parsing ───────────────────────────────────────────────────────
tree-sitter         = "0.20"
tree-sitter-rust    = "0.20"
tree-sitter-python  = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
sha2        = "0.10"
hex         = "0.4"
anyhow      = "1"
thiserror   = "1"
dirs        = "5"
regex       = "1"
similar     = "2"

# ── Logging / tracing ────────────────────────────────────────────────────────
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Terminal output ───────────────────────────────────────────────────────────
colored     = "2"
indicatif   = "0.17"
console     = "0.15"
dialoguer   = "0.11"
tabled      = { version = "0.14", features = ["std"] }

# ── Async channels / concurrency ─────────────────────────────────────────────
tokio-stream    = "0.1"
async-trait     = "0.1"

[dev-dependencies]
tempfile    = "3"
tokio-test  = "0.4"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"
strip       = true

[profile.dev]
opt-level   = 1
debug       = true
